# wingpanel-indicator-bluetooth

./: .travis.yml  CMakeLists.txt  README.md  meson.build
.github/workflows/: main.yml
data/: bluetooth.appdata.xml.in  bluetooth.metainfo.xml.in  gresource.xml  gschema.xml  indicator.css  io.elementary.desktop.wingpanel.bluetooth.gschema.xml  io.elementary.wingpanel.bluetooth.appdata.xml.in  io.elementary.wingpanel.bluetooth.gresource.xml  meson.build
debian/: changelog  control  copyright  rules
ebt/: Application.vala  io.elementary.bluetooth-daemon.desktop  io.elementary.bluetooth.desktop  meson.build
ebt/Dialog/: BtReceiver.vala  BtReciever.vala  BtResponse.vala  BtRetry.vala  BtScan.vala  BtSender.vala  DeviceRow.vala
ebt/Services/: Adapter.vala  Device.vala  Manager.vala  ObexAgent.vala  Session.vala  Transfer.vala
ebt/data/: meson.build
po/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bluetooth-indicator.pot  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+166 more)
po/extra/: LINGUAS  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  (+167 more)
schemas/: CMakeLists.txt  org.pantheon.desktop.wingpanel.indicators.bluetooth.gschema.xml
src/: CMakeLists.txt  Indicator.vala
src/Services/: Adapter.vala  Device.vala  Manager.vala  ObexAgent.vala  ObexManager.vala  RfkillBus.vala  Session.vala  Transfer.vala
src/Widgets/: Device.vala  DeviceView.vala  DisplayWidget.vala  MainView.vala  PopoverWidget.vala
src/Widgets/Views/: DeviceView.vala  DiscoveryView.vala  MainView.vala
